k8s/batch-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-server
  labels:
    app: batch-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: batch-server
  template:
    metadata:
      labels:
        app: batch-server
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: batch-server
          image: master-1:30002/project/batch-server:20260220-163858
          ports:
            - containerPort: 8090
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: batch-server
spec:
  type: ClusterIP
  selector:
    app: batch-server
  ports:
    - name: http
      port: 8090
      targetPort: 8090
