k8s/server-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-a
  labels:
    app: server-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-a
  template:
    metadata:
      labels:
        app: server-a
    spec:
      containers:
        - name: server-a
          image: master-1:30002/project/server-a:20260215-171522
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: server-a
spec:
  type: ClusterIP
  selector:
    app: server-a
  ports:
    - port: 8081
      targetPort: 8081
