k8s/server-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-b
  labels:
    app: server-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-b
  template:
    metadata:
      labels:
        app: server-b
    spec:
      containers:
        - name: server-b
          image: master-1:30002/project/server-b:20260215-232113
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: server-b
spec:
  type: ClusterIP
  selector:
    app: server-b
  ports:
    - port: 8082
      targetPort: 8082
