k8s/server-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-c
  labels:
    app: server-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-c
  template:
    metadata:
      labels:
        app: server-c
    spec:
      containers:
        - name: server-c
          image: master-1:30002/project/server-c:20260215-202210
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: server-c
spec:
  type: ClusterIP
  selector:
    app: server-c
  ports:
    - port: 8083
      targetPort: 8083
