k8s/spring-cloud-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-gateway
  labels:
    app: spring-cloud-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-gateway
  template:
    metadata:
      labels:
        app: spring-cloud-gateway
    spec:
      dnsConfig:
        searches:
          - redis-cluster-leader-headless.default.svc.cluster.local
      containers:
        - name: spring-cloud-gateway
          image: master-1:30002/project/spring-cloud-gateway:20260215-233752
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8000
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-gateway
spec:
  type: ClusterIP
  selector:
    app: spring-cloud-gateway
  ports:
    - port: 8000
      targetPort: 8000
